force-app/main/default/objects/Opportunity/fields/EmploymentTarget__c.field-meta.xml
<CustomField>
    <fullName>EmploymentTarget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employment Target</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Employment Target)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>