force-app/main/default/objects/Opportunity/fields/InvestmentEntity__c.field-meta.xml
<CustomField>
    <fullName>InvestmentEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investment Entity</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>