force-app/main/default/objects/Opportunity/fields/InvestmentTarget__c.field-meta.xml
<CustomField>
    <fullName>InvestmentTarget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investment Target</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Investment Target)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>