force-app/main/default/objects/Opportunity/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Los Angeles</fullName>
            </value>
            <value>
                <fullName>New York</fullName>
            </value>
            <value>
                <fullName>Miami</fullName>
            </value>
            <value>
                <fullName>San Francisco</fullName>
            </value>
            <value>
                <fullName>FULLY REMOTE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>