force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Needs More Money</fullName>
            </value>
            <value>
                <fullName>Wants More Equity</fullName>
            </value>
            <value>
                <fullName>Location Issue</fullName>
            </value>
            <value>
                <fullName>Steel-Perlot No Longer Interested</fullName>
            </value>
            <value>
                <fullName>Doesn&apos;t Agree with Valuation</fullName>
            </value>
            <value>
                <fullName>Decided on Different Investment</fullName>
            </value>
            <value>
                <fullName>Due Diligence Problem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>