force-app/main/default/objects/Opportunity/fields/Opportunity_LifeSpan__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_LifeSpan__c</fullName>
    <formula>TEXT(TODAY()- DATEVALUE(CreatedDate)) &amp; &quot; Days&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Life Span of the Oppurtunity</label>
    <type>Text</type>
</CustomField>