force-app/main/default/objects/Opportunity/fields/ProbabilityOfSuccess__c.field-meta.xml
<CustomField>
    <fullName>ProbabilityOfSuccess__c</fullName>
    <formula>IF ((Probability &gt;= 0.00)&amp;&amp;(Probability &lt;= 0.20),&apos;Very Unlikely to occur&apos;,
IF ((Probability &gt;= 0.21)&amp;&amp;(Probability &lt;= 0.40),&apos;Unlikely to occur&apos;,
IF ((Probability &gt;= 0.41)&amp;&amp;(Probability &lt;= 0.60),&apos;May Occur about half of the time&apos;,
IF ((Probability &gt;= 0.61)&amp;&amp;(Probability &lt;= 0.80),&apos;Likely to occur&apos;, NULL ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Probability Of Success</label>
    <type>Text</type>
</CustomField>