force-app/main/default/objects/Opportunity/validationRules/If_Opportunity_Type_Employment_Target.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Opportunity_Type_Employment_Target</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISPICKVAL(Type,&quot;Employee&quot;),ISBLANK(&quot;EmploymentTarget__c&quot;) )</errorConditionFormula>
    <errorMessage>&apos;EmploymentTarget&apos; is mandatory if the &apos;Opportunity Type&apos; is employee</errorMessage>
</ValidationRule>