force-app/main/default/objects/Opportunity/validationRules/If_Opportunity_Type_Investment_Target.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Opportunity_Type_Investment_Target</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISPICKVAL(Type,&quot;Investment&quot;),ISBLANK(&quot;InvestmentTarget__c&quot;) )</errorConditionFormula>
    <errorMessage>&apos;Investment Target&apos; is mandatory if the &apos;Opportunity Type&apos; is investment</errorMessage>
</ValidationRule>